src/scss/themes/ng/body.scss
/* ... */
// Label: Markdown
.cui-label-markdown .cui-label-content {
	display: block;

	h1, h2, h3, h4, h5, h6 {
		font-weight: normal;
		margin: 0 0 $padding;
	}

	h1 {
		font-size: 24px;
		line-height: 30px;
	}

	h2 {
		font-size: 20px;
		line-height: 25px;
	}

	a {
		color: $highlight-color;
		text-decoration: underline;
	}

	em {
		background: none;
		font-style: italic;
	}

	p,
	pre,
	blockquote,
	table {
		margin: 0 0 16px;
  }

  & > p,
  & > pre,
  & > table,
  & > blockquote {
		&:last-child {
			margin-bottom: 0;
    }
  }

  table {
    border: none;
    table-layout: auto;
    display: block;
    width: 100%;
    overflow: auto;
    word-break: keep-all;

    td, th {
			padding: 7px 12px;
			border: 1px solid hsl(0,0%,87%);
    }

    th {
			font-weight: bold;
			text-align: center;
    }

    tbody tr:nth-child(odd) {
			background: hsl(0,0%,97%);
    }

    col {
			width: auto;
    }
  }

  blockquote {
    padding: 8px 12px;
    border-left: 5px solid #eee;
  }

  code {
    border: none;
    background: hsl(0,0%,97%);
    white-space: pre-wrap;
  }

  pre {
    padding: 12px 15px;
    font-size: 13px;
    line-height: 1.45;
    background: hsl(0,0%,97%);
    white-space: pre-wrap;
    border-radius: 3px;
    border: none;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }

  hr {
    margin-top: 6px;
    margin-bottom: 6px;
    border: 0;
    border-top: 1px solid #dfdfdf;
  }
}

// Label: Multiline
.cui-label-multiline {
	// Conflict: makes it center vertically align in center
	// align-self: stretch;
	max-width: 100%; // prevent overflow when its the child of a flex parent
	display: flex;

	& + & {
		margin-top: 7px;
	}

	&:not(.cui-label-markdown) {
		.cui-label-content {
			word-wrap: break-word; // IE fallback
			word-break: break-word;
			white-space: pre-wrap;
		}
	}

	> .cui-label-content {
		flex: 1 1 auto;
		white-space: normal;
		overflow: visible;
	}

	.cui-label-content span {
		// white-space: normal;
		// white-space has to pre-wrap - otherwise it breaks the whole concept of a multiline label
		// example: collection description
	}
}

// Label: Manage Overflow

.cui-label-manage-overflow {
	position: relative;
	display: block;

	&.cui-label--measure-overflow {
		> .cui-label-content {
			max-height: 100px;
		}
	}

	> .cui-label-content {
		max-height: 75px;
		overflow: hidden;
	}

	.cui-label-manage-overflow-button {
		position: absolute;
		right: 0;
		bottom: 0;
		background: linear-gradient(to right, hsla(0,0%,100%,0), hsl(0,0%,100%) 10px);
		padding: 0 0 0 10px !important;
	}

	&.cui-label--show-overflow {
		> .cui-label-content {
			max-height: none !important;
		}

		.cui-label-manage-overflow-button {
			position: static;
			float: right;
		}
	}
}

// Label: Placeholder
.cui-empty-label {
	color: $muted-color;
	font-style: italic;
	margin: 0;
	cursor: default;

	.cui-label-content {
		display: inline-block;
	}
}

// Label: Centered
.cui-label-centered {
	flex: 1 1 auto;
	display: flex;
	align-items: center;
	justify-content: center;

	> .cui-label-content {
		text-align: center;
		flex-grow: 0;
	}
}


// Buttonbar
.cui-buttonbar {
	display: flex;
	align-items: center;
	// justify-content: space-between; CONFLICT: looks bad sometimes

	// > *:not(:last-child) {
	// 	margin-right: $gap;
	// }

	.cui-label {
		margin: 0 $small-gap;
		align-self: center;

		// CONFLICT: spacing needed around first/last labels
		// &:first-child {
		// 	margin-left: 0;
		// }

		// &:last-child {
		// 	margin-right: 0;
		// }
	}

	.cui-label-content {
		align-self: center; // Date-Time picker month label in footer
	}

	> .cui-button,
	> .cui-button-button,
	> .cui-data-field-input {
		+ .cui-button,
		+ .cui-button-button,
		+ .cui-data-field-input {
			margin-left: $padding;
		}
	}

	> .cui-button,
	> .cui-button-button,
	> .cui-data-field-input {
		+ .cui-buttonbar-group {
			margin-left: $padding/2;
		}
	}

	.cui-button-href {
		height: 100%;
	}

	.cui-buttonbar-group {
		+ .cui-button,
		+ .cui-button-href {
			margin-left: $padding/2;
		}
	}
}

// Buttonbar Group
.cui-buttonbar-group {
	display: flex;
	align-self: stretch; // use full height for bigger click area for buttons (example: tabs)

	> * {
		position: relative;
		align-self: stretch; // make sure that buttons are full height
		margin-left: -1px;

		.cui-button-visual,
		.cui-input {
			border-radius: 0;
		}

		&:first-child,
		&.cui-first-visible-child {
			margin-left: 0;

			.cui-button-visual,
			.cui-input {
				border-top-left-radius: $button-radius;
				border-bottom-left-radius: $button-radius;
			}

			&:before {
				display: none;
			}
		}

		&:last-child,
		&.cui-last-visible-child {
			.cui-button-visual,
			.cui-input {
				border-top-right-radius: $button-radius;
				border-bottom-right-radius: $button-radius;
			}
		}

		&.cui-active {
			z-index: 1;
		}
	}

	.cui-label {
		border: 1px solid $button-border;
		background: $foreground;
		margin-left: -1px;
		margin-right: 0;
		padding: 0 7px;
		color: $secondary-color;

		&-size-mini {
			height: 20px;
		}
	}

	> .cui-data-field {
		margin-left: -1px;

		&:first-child {
			margin-left: 0;
		}

		& + *:before {
			display: none;
		}
	}
}
/* ... */

